# Colorizer

./: Cargo.toml  README.md
custom/: ref_embeddings.json
src/: main.rs
static/: index.html
